@@ -17,6 +17,7 @@
    taken.
  * Updated to work on Centos 5.3.
  * Added a dependency on libnotify.
+ * Added a title bar icon.  Launchpad bug # 361019.
  * Minor bug fixes.
 
 
